Sat Jan  9 10:50:09 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds_sysdep_private.h src/tds/net.c:
	- Defined and use a sock_strerror

Sat Jan  9 10:33:10 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: Avoid double definition

Sat Jan  9 10:17:41 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/vasprintf.c:
	- Fix possible wrong error report if malloc does not set errno

Fri Jan  8 17:38:50 EST 2010	JK Lowden <jklowden@freetds.org>
	* include/replacements.h src/apps/bsqldb.c src/tds/mem.c
	- tsql works in win32, optarg is not const

Fri Jan  8 17:05:24 EST 2010	JK Lowden <jklowden@freetds.org>
	* Nmakefile include/replacements.h win32/config.h
	* src/apps/bsqldb.c src/apps/defncopy.c src/apps/tsql.c
	* src/tds/config.c src/tds/hmac_md5.c src/tds/mem.c
	* src/tds/net.c src/tds/numeric.c src/tds/token.c
	- Build some utilities under Win32. 
	- Print useful log messages for win32 connection failures. 	

Thu Jan  7 14:56:27 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/convert_tds2sql.c: added small comments

Mon Dec 28 14:30:21 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/odbc/convert_tds2sql.c src/odbc/odbc.c:
	* src/odbc/unittests/getdata.c:
	- Fix SQLGetData converting fixed to variable with truncation

Mon Dec 28 13:42:02 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/getdata.c:
	- Fix problem with iODBC (where sizeof(SQLWCHAR) == 4)

Tue Dec 22 15:56:11 EST 2009	JK Lowden <jklowden@freetds.org>
	* Nmakefile added, builds db-lib on Win32 with nmake.exe
	* src/odbc/convert_tds2sql.c remove unneeded cast

Tue Dec 22 20:01:16 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: Better way to fix data_type for date

Tue Dec 22 20:00:18 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/common.c: Don't call SQLAllocEnv for ODBC 3
