@@ -1,3 +1,6 @@
+Sat Jan  9 11:55:34 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/apps/defncopy.c: cleanup defncopy
+
 Sat Jan  9 10:50:09 CET 2010    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tds_sysdep_private.h src/tds/net.c:
 	- Defined and use a sock_strerror
@@ -2058,4 +2061,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.82 added because of release
 	
 $FreeTDS$
-$Id: ChangeLog,v 1.2924 2010/01/09 09:50:16 freddy77 Exp $
+$Id: ChangeLog,v 1.2925 2010/01/09 10:55:44 freddy77 Exp $
